2005-02-25 Chris Larson <kergoth@handhelds.org>

	* AUTHORS: Add self to AUTHORS file.
	* configure.in: Deleted.

2004-12-14 Chris Larson <kergoth@handhelds.org>

	* Files all over the tree: Apply patch to add support for using
	  the new gcc symbol visibility features that are available
	  in gcc 4.0 (and patched 3.4.x).  Also import a few m4 macros
	  and general buildsystem updates to facilitate automatic use of
	  gcc visibility if it's supported.

2004-11-22 Holger Freyther <zecke@handhelds.org>

	* plugins/dejitter.c: Sometimes after ts_open/ts_close/ts_open on
	  the first sample(s) dejitter will crash.  memset the tslib_dejitter
	  structure with zeros so djt->nr's value isn't undefined.

2004-10-19 Chris Larson <kergoth@handhelds.org>

	* Files all over the tree: Fixed up a bunch of compile warnings,
	  at least some of which actually did cause breakage for the user.

2004-07-08 Chris Larson <kergoth@handhelds.org>

	* plugins/input-raw.c: As EV_SYN can be checked for at runtime rather
	  than build time, #define it when compiling against kernel headers
	  that do not define it (2.4).

2004-01-26 Andrew Zabolotny <zap@homelink.ru>

	* README: Updated documentation on module parameters.
	* plugins/linear.c: Removed the bogus noxyswap parameter.

2004-06-14  Chris Larson  <kergoth@handhelds.org>

	* src/ts_read_raw.c: Fix bug hit by me and identified by Phil
	  related to the way we call the raw read functions.
	* src/input-raw.c (ts_input_read): Rename function, call out
	  check_fd to confirm sanity of this inputdevice, make EV_SYN
	  decision at runtime.
	* src/input-raw.c (check_fd): Rework a bit, and check for EV_SYN
	  event availability.
	* src/input-raw.c (mod_init): Switch from static to vars in our
	  malloced tslib_module_info based structure.
	* src/input-raw.c (ts_input_fini): New function.  Free malloced structure.
	* etc/ts.conf: Add commented module_raw entry for 'input'.
	* src/ts_config.c: Abort and warn when no raw modules were loaded.